added CodeHollow.FeedReader library to read rss channel or do request to this, built interfaces to list feed news

--- a/XamarinPrismTemplateForMac/XamarinPrismTemplateForMac.iOS/XamarinPrismTemplateForMac.iOS.csproj
+++ b/XamarinPrismTemplateForMac/XamarinPrismTemplateForMac.iOS/XamarinPrismTemplateForMac.iOS.csproj
@@ -136,4 +136,7 @@
       <Name>XamarinPrismTemplateForMac</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\news_icon.jpeg" />
+  </ItemGroup>
 </Project>
