--- a/XamarinPrismTemplateForMac/XamarinPrismTemplateForMac.Android/XamarinPrismTemplateForMac.Android.csproj
+++ b/XamarinPrismTemplateForMac/XamarinPrismTemplateForMac.Android/XamarinPrismTemplateForMac.Android.csproj
@@ -84,6 +84,10 @@
     <AndroidResource Include="Resources\mipmap-xxhdpi\launcher_foreground.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
+    <AndroidResource Include="Resources\drawable\news_icon.jpeg">
+      <SubType></SubType>
+      <Generator></Generator>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable\" />
