--- a/XamarinPrismTemplateForMac/XamarinPrismTemplateForMac/XamarinPrismTemplateForMac.csproj
+++ b/XamarinPrismTemplateForMac/XamarinPrismTemplateForMac/XamarinPrismTemplateForMac.csproj
@@ -11,17 +11,23 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2012" />
-    <PackageReference Include="Xamarin.Essentials" Version="1.6.1" />
+    <PackageReference Include="Xamarin.Forms" Version="5.0.0.2545" />
+    <PackageReference Include="Xamarin.Essentials" Version="1.7.4" />
     <PackageReference Include="Prism.Unity.Forms" Version="8.1.97" />
+    <PackageReference Include="CodeHollow.FeedReader" Version="1.2.4" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Views\" />
     <None Remove="Prism.Unity.Forms" />
     <None Remove="ViewModels\" />
+    <None Remove="Models\" />
+    <None Remove="CodeHollow.FeedReader" />
+    <None Remove="Resources\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\" />
     <Folder Include="ViewModels\" />
+    <Folder Include="Models\" />
+    <Folder Include="Resources\" />
   </ItemGroup>
 </Project>
