--- a/XamarinPrismTemplateForMac/XamarinPrismTemplateForMac.iOS/XamarinPrismTemplateForMac.iOS.csproj
+++ b/XamarinPrismTemplateForMac/XamarinPrismTemplateForMac.iOS/XamarinPrismTemplateForMac.iOS.csproj
@@ -138,5 +138,6 @@
   </ItemGroup>
   <ItemGroup>
     <BundleResource Include="Resources\news_icon.jpeg" />
+    <BundleResource Include="Resources\save_icon.png" />
   </ItemGroup>
 </Project>
