--- a/XamarinPrismTemplateForMac/XamarinPrismTemplateForMac/XamarinPrismTemplateForMac.csproj
+++ b/XamarinPrismTemplateForMac/XamarinPrismTemplateForMac/XamarinPrismTemplateForMac.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Xamarin.Essentials" Version="1.7.4" />
     <PackageReference Include="Prism.Unity.Forms" Version="8.1.97" />
     <PackageReference Include="CodeHollow.FeedReader" Version="1.2.4" />
+    <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Views\" />
@@ -23,11 +24,16 @@
     <None Remove="Models\" />
     <None Remove="CodeHollow.FeedReader" />
     <None Remove="Resources\" />
+    <None Remove="DbModels\" />
+    <None Remove="sqlite-net-pcl" />
+    <None Remove="Services\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\" />
     <Folder Include="ViewModels\" />
     <Folder Include="Models\" />
     <Folder Include="Resources\" />
+    <Folder Include="DbModels\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 </Project>
