added feature and validations to view news saved

--- a/XamarinPrismTemplateForMac/XamarinPrismTemplateForMac/XamarinPrismTemplateForMac.csproj
+++ b/XamarinPrismTemplateForMac/XamarinPrismTemplateForMac/XamarinPrismTemplateForMac.csproj
@@ -27,6 +27,7 @@
     <None Remove="DbModels\" />
     <None Remove="sqlite-net-pcl" />
     <None Remove="Services\" />
+    <None Remove="Helpers\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Views\" />
@@ -35,5 +36,6 @@
     <Folder Include="Resources\" />
     <Folder Include="DbModels\" />
     <Folder Include="Services\" />
+    <Folder Include="Helpers\" />
   </ItemGroup>
 </Project>
